# Gantry

./: .gitignore  README.md
config/: Trident-Octopus-Config.cfg
docs/: dbus.md  file_structure.md
gantry/: Cargo.toml  rustc-ice-2025-02-27T22_48_18-325339.txt  rustc-ice-2025-02-27T22_48_18-325340.txt
gantry-api/: Cargo.toml
gantry-api/src/: lib.rs
gantry-webui/: gantry-web.css  gantry-web.html  package-lock.json  package.json  tsconfig.json  webpack.config.js
gantry-webui/src/: dashboard.ts  gcode_viewer.js  heightmap.ts  index.js  printer.js  printer.ts  server.js
gantry/src/: dbus.rs  files.rs  global_auth.rs  graphql_server.rs  main.rs  server.rs
gantry/src/config/: cfg.pest  cfg.rs  cfg_pest.rs  mod.rs
gantry/src/gcode/: bgcode.rs  g1.rs  gcode.pest  mod.rs  parser.rs  vm.rs
gantry/src/printer/: action.rs  auth.rs  dbus.rs  http.rs  instance.rs  mod.rs  printer.rs
gantry/tests/: OrcaBenchy.gcode
