[package]
name = "gantry-api"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = {version = "0.12", features = ["json", "default-tls"]}
serde = {version = "1.0", features = ["derive"]}
url = "*"
zbus = {version = "5.5", default-features = false, features = ["tokio"]}
zvariant = {version = "5.4", features = ["option-as-array"]}