[package]
name = "gantry"
version = "0.1.0"
edition = "2024"

[dependencies]
gantry-api = {path = "../gantry-api"}

anyhow = "*"
axum = "*"
axum-auth = "*"
clap = {version = "4.5", features = ["derive"]}
dirs = "5.0"
lazy_static = "*"
serde = {version = "1.0", features = ["derive"]}
serde_json = "*"
tokio = {version ="1.43", features = ["full"]}
tower = "*"
zbus = {version = "5.5", default-features = false, features = ["tokio"]}
zvariant = {version = "5.4", features = ["option-as-array"]}