[package]
name = "gantry"
version = "0.1.0"
edition = "2024"

[dependencies]
gantry-api = {path = "../gantry-api"}

anyhow = "1"
axum = "0.8"
axum-auth = "0.8"
clap = {version = "4.5", features = ["derive"]}
dirs = "5.0"
fast-float = "0.2"
itertools = "0.14"
lazy_static = "1.5"
pest = "2"
pest_derive = "2"
serde = {version = "1", features = ["derive"]}
serde_json = "1"
tokio = {version ="1", features = ["full"]}
unicode-id-start = "1.3.1"
zbus = {version = "5.5", default-features = false, features = ["tokio"]}